--- a/templates/adminTable.html
+++ b/templates/adminTable.html
@@ -28,6 +28,10 @@
 		        {% endfor %}
 	        </table>
 	    </div>
+	    <div style="height:75px"></div>
+	    <div>
+	    	<a href="/admin/"><b>Home</b></a> 
+	    </div>
 	</body>
 {% else %}
     <p>No Lecturers are available.</p>
